kube-cluster/rest-grpc/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 2
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: dsc-rest-grpc
        image: aliaoco/dsc-rest-grpc:latest
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        command:
        - python
        args:
        - rest-grpc.py
        ports:
        - containerPort: 5000
